--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   sqflite: ^1.2.1
   built_value: ^7.0.9
   built_collection: ^4.3.2
+  rxdart: ^0.22.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
